unpackaged/main/default/objects/GSR_Lead_Time_Summary__c/GSR_Lead_Time_Summary__c.object-meta.xml
<CustomObject>
    <label>Lead Time Summary</label>
    <nameField>
        <displayFormat>GRLTS-{0000000}</displayFormat>
        <label>Lead Time Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Time Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>