unpackaged/main/default/objects/GSR_Lead_Time_Summary__c/fields/Mean_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Mean_Lead_Time__c</fullName>
    <label>Mean Lead Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>