unpackaged/main/default/objects/GSR_Lead_Time_Summary__c/fields/Min_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Min_Lead_Time__c</fullName>
    <label>Min Lead Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>