unpackaged/main/default/objects/GSR_Lead_Time_Summary__c/fields/Source_Branch__c.field-meta.xml
<CustomField>
    <fullName>Source_Branch__c</fullName>
    <label>Source Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>